[tool.poetry]
name = "ackboard"
version = "0.1.0"
description = "A dashboard for ACKs"
authors = ["Andrew Chow <github@achow101.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
